Bug: #3985 - More clearly identify the reason description and reason name in the study deletion dialog box
- The pre-defined reason dropdown list is now invisible until users click on a button.

- Also corrected the position of the timeout warning panel in IE6.

--- a/ImageServer/Web/Application/App_Themes/Default/StyleSheets/Global.css
+++ b/ImageServer/Web/Application/App_Themes/Default/StyleSheets/Global.css
@@ -462,8 +462,8 @@ pre
 {
 	z-index: 1000000; /* make it top-most , hopefully it's enough*/
 	display:none;
-	position:absolute;
 	width: 100%;
+	position:fixed;
 	top:0px;
 	left:0px;
 	background-color: #ffff99;
